<resources>
    <string name="app_name">ToDoList</string>
    <string name="to_do_list">TO DO lIST</string>
    <string name="welcom">Creat Profile to \n Start Your First \n TODo List</string>
    <string name="name">Your Name</string>
    <string name="password">Password</string>
    <string name="email">Your email Address</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="edit">Edit</string>
    <string name="meet_joseph">Meet Joseph</string>
    <string name="_01_october_2018_10_00">01 OCTOBER 2018,10:00</string>
    <string name="meet">MEET</string>
    <string name="view_task">View Task</string>
    <string name="todo">TODO</string>
    <string name="next">next</string>
</resources>