<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="#2dde98">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Creat Profile to \n Start Your First \n TODo List"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ed"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        android:hint="@string/name"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ed"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/create_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ed"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/create_password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textColorHint="@android:color/white"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/creat_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/create_email"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/app_name"
        android:text="Creat Yout Profile"
        android:textColor="#2dde98"
        android:textSize="19sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/creat_btn"
        android:text="Aready have an account ?"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LogIn"
        android:onClick="Login"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />




</androidx.constraintlayout.widget.ConstraintLayout>