<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#2dde98">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/welcome_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ed"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textColorHint="@android:color/white"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ed"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"/>

    <TextView
        android:id="@+id/name_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Aready have an account ?"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/name_forget"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/app_name"
        android:text="Login"
        android:textColor="#2dde98"
        android:textSize="19sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="120dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:text="Don't have an account"/>

    <TextView
        android:id="@+id/login_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:onClick="creat"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        android:text="Create Your Profile "/>










</androidx.constraintlayout.widget.ConstraintLayout>